fix safari layout bug

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>CJK Web Font Demo</title>
   <meta name="author" content="米老朱" />
   <meta name="description" content="演示如何在网页中优雅的集成 CJK 字体文件" />
+  <link rel="stylesheet" href="//cdn.bootcss.com/normalize/7.0.0/normalize.min.css" />
   <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
